# BoostTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/body/boosttest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/body/boosttest/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/body/boosttest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
